project development done

--- a/vue-project/src/assets/main.css
+++ b/vue-project/src/assets/main.css
@@ -42,13 +42,35 @@ footer {
   align-items: center;
 }
 
-button { 
+button, .button { 
   background-color: #004467;
   color: #eaf6f9;
   padding: 4px;
   border-radius: 4px;
 }
 
-button:hover {
+button:hover, .button:hover {
   cursor: pointer;
+}
+
+a, a:hover, a:focus, a:active, a:visited {
+  text-decoration: none;
+  text-transform: none;
+}
+
+input {
+  outline: none;
+  height: 24px;
+  border-radius: 4px;
+  padding: 0 0 0 4px;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
 }
